# PRICE-TRACKER

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_notifications_table.py
backend/src/: __init__.py
backend/src/api/: dependencies.py  main.py
backend/src/api/routes/: __init__.py  admin.py  alerts.py  auth.py  notifications.py  price_history.py  tours.py
backend/src/core/: config.py  database.py  security.py
backend/src/models/: __init__.py  alert.py  notification.py  price_history.py  tour.py  user.py
backend/src/schemas/: __init__.py  alert.py  notification.py  price_history.py  tour.py  user.py
backend/src/services/: __init__.py  alert_service.py  civitatis_scraper.py  price_sync.py  scheduler.py
backend/src/utils/: logger.py  rate_limiter.py
docs/: platform-overview.html
frontend/: Dockerfile.prod  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  LoginPage.tsx  NotificationsPage.tsx  RegisterPage.tsx  TourDetailPage.tsx  ToursPage.tsx
frontend/src/stores/: authStore.ts
nginx/: nginx.conf
scripts/: init-db.sh  start-dev.sh  start-prod.sh
